--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@bazel_gazelle//:def.bzl", "gazelle")
 
-# gazelle:prefix github.com/VolodymyrPobochii/gotil
+# gazelle:prefix github.com/pobochiigo/gotil
 # gazelle:proto disable_global
 # gazelle:go_naming_convention import_alias
 
